--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Flutter. Podstawy.
 description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/16634538?v=4
 
 #
 # Flags below are optional
@@ -18,18 +18,18 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: autor@flutterpodstawy.pl
+  facebook: https://www.facebook.com/programistabyc
   flickr:
   github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  instagram: https://www.instagram.com/krzysiek.z.programistabyc.pl/
+  linkedin: https://www.linkedin.com/in/krzysztof-baranowski-8b346a131/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  twitter:
+  stackoverflow:
+  youtube: 
+  googleplus: 
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
