--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Flutter. Podstawy.
 
 # Short bio or description (displayed in the header)
-description: 
+description: Strona główna książki.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/16634538?v=4
