--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://avatars.githubusercontent.com/u/16634538?v=4
 footer-links:
   dribbble:
   email: autor@flutterpodstawy.pl
-  facebook: https://www.facebook.com/programistabyc
+  facebook: programistabyc
   flickr:
-  github: barryclark/jekyll-now
-  instagram: https://www.instagram.com/krzysiek.z.programistabyc.pl/
-  linkedin: https://www.linkedin.com/in/krzysztof-baranowski-8b346a131/
+  github: krzbbaranowski
+  instagram: krzysiek.z.programistabyc.pl
+  linkedin: krzysztof-baranowski-8b346a131
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
